--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,8 +5,22 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border-radius: 10px;
     margin: 0 7.5px 15px;
+    overflow: hidden;
+    
+    &:hover {
+      cursor: pointer;
+
+      & .bg-image {
+        transform: scale(1.1);
+        transition: transform 4s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+
+      & .content {
+        opacity: 0.9;
+      }
+    }
   
     &:first-child {
       margin-right: 7.5px;
@@ -14,6 +28,17 @@
   
     &:last-child {
       margin-left: 7.5px;
+    }
+
+    .bg-image {
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;  
+    }
+
+    &.large {
+      height: 380px;
     }
   
     .content {
@@ -24,17 +49,21 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: white;
+      opacity: 0.7;
+      position: absolute;
   
       .title {
         font-weight: bold;
         margin-bottom: 6px;
         font-size: 22px;
-        color: #4a4a4a;
+        color: black;
       }
   
       .subtitle {
         font-weight: lighter;
         font-size: 16px;
+        color: black;
       }
     }
   }
