--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,6 @@
 }
 
 body {
-  background-color: white;
-  font-family: 'Open Sans', sans-serif;
+  background-color: #f6f6f6;
+  font-family: "Open Sans", sans-serif;
 }
