--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 350px;
-  align-items: center;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+  margin-bottom: 50px;
 
   .image {
     width: 100%;
