integrated firebase, added sign in feature with google and signout feature.

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -23,6 +23,8 @@
       padding: 10px 15px;
       color: black;
       font-weight: 500;
+      text-decoration: underline;
+      cursor: pointer;
     }
   }
 }
